MDEV-6794 XtraDB no longer using UNIQUE as clustered index when PK missing

try the first unique key as a surrogate PK *before* disabling extended
keys because of missing PK